@@ -6,10 +6,13 @@ plugins {
 application {
     mainClass = 'client.Main'
 }
+repositories {
+	mavenCentral()
+}
 
 javafx {
     version = "17.0.2"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
@@ -21,10 +24,23 @@ dependencies {
 	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
 	
 	implementation 'com.google.inject:guice:5.0.1'
+	implementation 'org.fxyz3d:fxyz3d:0.5.4'
+	implementation 'org.fxyz3d:fxyz3d-importers:0.5.4'
 
 	implementation 'org.openjfx:javafx-controls:17.0.2'
 	implementation 'org.openjfx:javafx-fxml:17.0.2'
 
 	implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.9'
 	implementation group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-9.1.2'
+}
+
+run {
+	jvmArgs = [
+			"--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+			"--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+			"--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+			"--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+			"--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+			"--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"
+	]
 }
